1572387631 | 60 files | M bin/version.txt,  M content/vrmonitor/translations/vrmonitor_finnish.txt,  M content/vrmonitor/translations/vrmonitor_german.txt,  M content/vrmonitor/translations/vrmonitor_greek.txt,  M content/vrmonitor/translations/vrmonitor_japanese.txt,  M drivers/lighthouse/resources/webinterface/pairing.html,  M resources/config/vrcompositor_actions_vi_VN.json,  M resources/config/vrcompositor_bindings_gamepad.json,  M resources/webinterface/dashboard/bindingcallouts.html,  M resources/webinterface/dashboard/controllerbinding.html,  M resources/webinterface/dashboard/controllerbindingui.js,  M resources/webinterface/dashboard/debugcommands.html,  M resources/webinterface/dashboard/fallback.html,  M resources/webinterface/dashboard/keyboard.html,  M resources/webinterface/dashboard/localization/bindingui_danish.json,  M resources/webinterface/dashboard/localization/bindingui_dutch.json,  M resources/webinterface/dashboard/localization/bindingui_finnish.json,  M resources/webinterface/dashboard/localization/bindingui_
https://steamdb.info/patchnotes/4337702/

--- a/content/vrmonitor/translations/vrmonitor_finnish.txt
+++ b/content/vrmonitor/translations/vrmonitor_finnish.txt
@@ -2539,5 +2539,7 @@
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_BS20"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug any USB cable connected to the Base Station.<li>Do NOT connect USB to the Base Station.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR and try again.</ul>"
 "BS_PromotePowerManagement_Title"	"SteamVR"
 "[english]BS_PromotePowerManagement_Title"	"SteamVR"
+"BS_PromotePowerManagement_Enable"	"Ota tukiaseman virranhallinta käyttöön *"
+"[english]BS_PromotePowerManagement_Enable"	"Enable Base Station Power Management *"
 }
 }
