--- a/content/vrmonitor/translations/vrmonitor_german.txt
+++ b/content/vrmonitor/translations/vrmonitor_german.txt
@@ -1410,7 +1410,7 @@
 "[english]VRState_Standby"	"Standby"
 "Settings_Audio_AudioMirrorUnsupported"	"Ton kann auf diesem Computer nicht gespiegelt werden"
 "[english]Settings_Audio_AudioMirrorUnsupported"	"Audio mirroring is not supported on this computer"
-"Settings_AllowReprojection"	"Verschachtelte Bewegungsglättung erlauben (empfohlen)"
+"Settings_AllowReprojection"	"Verschachtelte Rückprojektion erlauben (empfohlen)"
 "[english]Settings_AllowReprojection"	"Allow interleaved reprojection (recommended)"
 "DismissableWarning_Detected"	"Erkannt"
 "[english]DismissableWarning_Detected"	"Detected"
@@ -1572,7 +1572,7 @@
 "[english]DismissableWarning_DisplayInExtendedMode"	"Display in Extended Mode (0x10000)"
 "Settings_Advanced_DirectMode_Header"	"Direkter Anzeigemodus"
 "[english]Settings_Advanced_DirectMode_Header"	"Direct Display Mode"
-"Settings_ForceReprojection"	"Bewegungsglättung immer aktiviert."
+"Settings_ForceReprojection"	"Rückprojektion immer aktiviert"
 "[english]Settings_ForceReprojection"	"Enable 'always-on reprojection'"
 "Settings_ForceReprojection_Info"	"Diese Einstellung ist nur für nicht-aktive Spiele gedacht, da hierdurch die verbesserte\nPositionsbestimmung verloren geht, um langsameren Anwendungen mehr Zeit zum Rendern zu verschaffen."
 "[english]Settings_ForceReprojection_Info"	"This setting is only suitable for non-active games, as it trades off increased\npositional prediction to provide more time for slower applications to render."
@@ -1815,11 +1815,11 @@
 "[english]Settings_EnableDashboard"	"Enable VR Dashboard"
 "Settings_ArcadeMode"	"Arcade-Modus aktivieren"
 "[english]Settings_ArcadeMode"	"Enable arcade mode"
-"Settings_AllowAsyncReprojection"	"Bewegungsglättung erlauben (empfohlen)"
+"Settings_AllowAsyncReprojection"	"Asynchrone Rückprojektion erlauben (empfohlen)"
 "[english]Settings_AllowAsyncReprojection"	"Allow asynchronous reprojection (recommended)"
-"Advanced_AsyncActive"	"Bewegungsglättung an"
+"Advanced_AsyncActive"	"Asynchrone Rückprojektion an"
 "[english]Advanced_AsyncActive"	"Async Reprojection On"
-"Advanced_AsyncNotActive"	"Bewegungsglättung aus"
+"Advanced_AsyncNotActive"	"Asynchrone Rückprojektion aus"
 "[english]Advanced_AsyncNotActive"	"Async Reprojection Off"
 "Lighthouse_BasestationInternalFault_01_Header"	"Basisstation ausgefallen"
 "[english]Lighthouse_BasestationInternalFault_01_Header"	"Base station unusable"
@@ -2117,9 +2117,9 @@
 "[english]QuickCalibrate_GiganticSpace"	"Gigantic Space"
 "Advanced_PerfGraphInHMD"	"GPU-Leistungsgraph im VR-Headset anzeigen"
 "[english]Advanced_PerfGraphInHMD"	"Display GPU performance graph in headset"
-"Advanced_ReprojectionOn"	"Bewegungsglättung an"
+"Advanced_ReprojectionOn"	"Rückprojektion an"
 "[english]Advanced_ReprojectionOn"	"Reprojection On"
-"Advanced_ReprojectionOff"	"Bewegungsglättung aus"
+"Advanced_ReprojectionOff"	"Rückprojektion aus"
 "[english]Advanced_ReprojectionOff"	"Reprojection Off"
 "Settings_StatusWindowHidePopups_Text"	"VR-Warnungen und -Meldungen unterdrücken, wenn minimiert"
 "[english]Settings_StatusWindowHidePopups_Text"	"Suppress VR warnings and alerts when minimized"
@@ -2575,11 +2575,11 @@
 "[english]HeadsetView_DebugCommands"	"Open Debug Commands"
 "HeadsetView_HideButtonLabel"	"VR-Ansicht ausblenden"
 "[english]HeadsetView_HideButtonLabel"	"Hide VR View"
-"Settings_PerApplication_Reprojection_Header"	"Bewegungsglättung"
+"Settings_PerApplication_Reprojection_Header"	"Rückprojektion"
 "[english]Settings_PerApplication_Reprojection_Header"	"Reprojection"
-"Settings_PerApplication_Reprojection_Checkbox"	"Klassischen Bewegungsglättungsmodus verwenden"
+"Settings_PerApplication_Reprojection_Checkbox"	"Klassischen Rückprojektionsmodus verwenden"
 "[english]Settings_PerApplication_Reprojection_Checkbox"	"Use legacy reprojection mode"
-"Settings_PerApplication_Reprojection_Description"	"Durch Markieren dieser Option wird Bewegungsglättung für diesen Titel deaktiviert."
+"Settings_PerApplication_Reprojection_Description"	"Durch Markieren dieser Option wird asynchrone Rückprojektion für diesen Titel deaktiviert."
 "[english]Settings_PerApplication_Reprojection_Description"	"Checking this option will disable asynchronous reprojection for this title."
 "FirmwareWizard_UpdateBasestationWireless_Fail_USBConnected"	"Eine unerwartete USB-Verbindung zur Basisstation verhindert das drahtlose Update.<br><br><font color=#aaaa00>Bitte entfernen Sie das mit der Basisstation verbundene USB-Kabel.</font>"
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_USBConnected"	"An unexpected USB connection to the Base Station is preventing the wireless update.<br><br><font color=#aaaa00>Please unplug the USB cable that is plugged into the Base Station.</font>"
