--- a/content/vrmonitor/translations/vrmonitor_japanese.txt
+++ b/content/vrmonitor/translations/vrmonitor_japanese.txt
@@ -1111,9 +1111,9 @@
 "[english]Settings_Audio_Header"	"Audio Settings"
 "Settings_Audio_On"	"SteamVRを使用する時..."
 "[english]Settings_Audio_On"	"When using SteamVR..."
-"Settings_Audio_AudioPlay"	"プレイバックデバイスの設定："
+"Settings_Audio_AudioPlay"	"オーディオ出力デバイス"
 "[english]Settings_Audio_AudioPlay"	"Audio output device"
-"Settings_Audio_AudioRecord"	"録音デバイスの設定："
+"Settings_Audio_AudioRecord"	"オーディオ入力デバイス"
 "[english]Settings_Audio_AudioRecord"	"Audio input device"
 "Settings_Audio_Off"	"SteamVRを使用しない時..."
 "[english]Settings_Audio_Off"	"When not use SteamVR..."
@@ -1431,7 +1431,7 @@
 "[english]Settings_NotificationKnockKnock_Text"	"Display Knock Knock"
 "Settings_NotificationKnockKnock_Info"	"これによりVRを使用している人の注意を引くことができます。"
 "[english]Settings_NotificationKnockKnock_Info"	"This lets people get the attention of the person using VR."
-"KnockKnock_Text"	"現在 VR 中です。もし、私に呼びかける場合は、下にあるボタンか '%1' キーを押してください。"
+"KnockKnock_Text"	"現在VRを使用中です。私に呼びかけたい場合は、下のボタンか「%1」キーを押してください。"
 "[english]KnockKnock_Text"	"I'm in VR right now. If you'd like to get my attention please click the button below or press the '%1' key."
 "KnockKnock_Button"	"トントン"
 "[english]KnockKnock_Button"	"Knock Knock"
@@ -1491,7 +1491,7 @@
 "[english]WorkshopUpload_Error_NoItemsToEdit"	"No existing files were found to edit!"
 "FirmwareWizard_WatchmanRecovery"	"トラッキングデバイスの更新"
 "[english]FirmwareWizard_WatchmanRecovery"	"Tracking Device Update"
-"KnockKnock_Title"	"トントン"
+"KnockKnock_Title"	"お呼びですか？"
 "[english]KnockKnock_Title"	"Want my attention?"
 "Settings_DisableEnhancedPowerManagement_FailToStart"	"ヘルパーアプリケーションを起動することができませんでした。\n管理者としてこのアプリケーションを実行できるか確認してください。\n"
 "[english]Settings_DisableEnhancedPowerManagement_FailToStart"	"The helper application was not able to start.\nMake sure that you can run this application as admin.\n"
@@ -1959,7 +1959,7 @@
 "[english]Settings_PauseOnStandby"	"Pause rendering when headset is idle"
 "MenuAction_RunMediaPlayer"	"メディアプレイヤー"
 "[english]MenuAction_RunMediaPlayer"	"Media Player"
-"Settings_LockedModeCheck"	"ロックモード"
+"Settings_LockedModeCheck"	"コンピューターのロック中もヘッドセットを有効にする"
 "[english]Settings_LockedModeCheck"	"Enable headset while computer is locked"
 "Settings_LockedModeDesc"	"　"
 "[english]Settings_LockedModeDesc"	""
@@ -1975,9 +1975,9 @@
 "[english]DismissableWarning_BasestationsSyncOnBeamChannelConflict"	"Sync on Beam Channel Conflict (0x400000)"
 "Settings_PowerOffBaseStations_Explanation"	"電源管理されたベースステーションでは、SteamVR が 60 秒間使用されないとスタンバイモードになり、SteamVR を開始するとスタンバイ状態から復帰します。この設定は、複数の SteamVR ユーザーとトラッキング空間を共有している場合にはお勧めできません。"
 "[english]Settings_PowerOffBaseStations_Explanation"	"Power managed Base Stations go into standby mode after 60 seconds when SteamVR is not in use and wake up when SteamVR starts. This setting is not recommended for shared tracking spaces with multiple SteamVR users."
-"Settings_BaseStationsWakeUpAll_Explanation"	"ブルートゥース信号を送信して、電源管理モードで受信待機中のすべてのベースステーションを起動します。"
+"Settings_BaseStationsWakeUpAll_Explanation"	"リモート電源管理中のすべてのベースステーションを起動します。"
 "[english]Settings_BaseStationsWakeUpAll_Explanation"	"Wakes all base stations participating in remote power management."
-"Settings_Bluetooth_ServicesNotAvailable"	"ブルートゥースサービスが利用できません。"
+"Settings_Bluetooth_ServicesNotAvailable"	"ブルートゥースが利用できません"
 "[english]Settings_Bluetooth_ServicesNotAvailable"	"Bluetooth not available"
 "Settings_Bluetooth_ScanForBaseStations"	"ベースステーションのスキャン"
 "[english]Settings_Bluetooth_ScanForBaseStations"	"Scan For Base Stations"
@@ -1989,7 +1989,7 @@
 "[english]Settings_Bluetooth_Driver_Update"	"Update Bluetooth Driver"
 "Settings_Bluetooth_Driver_Update_Description"	"ワイヤレスブルートゥース通信機能を有効にするには、リンクボックスのブルートゥースドライバを更新してください。これを行うには管理者権限が必要です。"
 "[english]Settings_Bluetooth_Driver_Update_Description"	"Update the Link Box Bluetooth driver to enable wireless Bluetooth communication features. This requires administrative credentials."
-"Settings_Advanced_Supersampling_Warning"	"<b>警告:</b> 以下の手動オーバーライドはすべてのアプリケーションに影響します。特定のアプリケーションの解像度を変更するには、左側の「アプリケーション」タブを使用してください。"
+"Settings_Advanced_Supersampling_Warning"	"<b>警告:</b> 以下の解像度設定はすべてのアプリケーションに影響します。特定のアプリケーションの解像度を変更するには、「アプリケーション」タブを使用してください。"
 "[english]Settings_Advanced_Supersampling_Warning"	"<b>WARNING:</b> The resolution setting below will affect all applications. To change the resolution for a specific application, visit the Applications tab."
 "Settings_Advanced_SupersamplingManualOverride"	"カスタム解像度を有効化"
 "[english]Settings_Advanced_SupersamplingManualOverride"	"Enable custom resolution"
@@ -1999,7 +1999,7 @@
 "[english]Settings_PerApplication_Header"	"Use these options to create unique settings per application"
 "Settings_PerApplication_AppResTitle"	"カスタム解像度"
 "[english]Settings_PerApplication_AppResTitle"	"Custom Resolution"
-"Settings_PerApplication_AppResHeader"	"この設定は、左の「ビデオ」タブに表示される、現在のグローバルアプリケーション解像度設定に乗算されます。設定を有効にするには、アプリケーションを再起動する必要があります。(デフォルトは 100%)"
+"Settings_PerApplication_AppResHeader"	"この設定は動画アプリケーション解像度設定に乗算されます。設定を有効にするには、アプリケーションを再起動する必要があります。(デフォルトは100%)"
 "[english]Settings_PerApplication_AppResHeader"	"This setting is a multiplier on top of your Video Application Resolution settings. This application may need to be restarted for settings to take effect. (Default is 100%)"
 "Settings_PerApplication_AppResFooter"	"現在の設定は、片目あたり <font color=#eeeeee>%1x%2</font> でレンダリングします。"
 "[english]Settings_PerApplication_AppResFooter"	"The current setting renders each eye at <font color=#eeeeee>%1x%2</font>"
@@ -2017,7 +2017,7 @@
 "[english]FirmwareWizard_ImageBridgeUpdate"	"Device Update"
 "BluetoothControllerStatus_Unknown"	"不明"
 "[english]BluetoothControllerStatus_Unknown"	"Unknown"
-"BluetoothControllerStatus_ServiceNotFound"	"ブルートゥースサービスが見つかりません。SteamVR のインストール状況を確認してください。"
+"BluetoothControllerStatus_ServiceNotFound"	"ブルートゥース機能が見つかりません。SteamVRのインストール状況を確認してください。"
 "[english]BluetoothControllerStatus_ServiceNotFound"	"Bluetooth capability not found. Please verify your SteamVR installation."
 "BluetoothControllerStatus_ServiceError"	"ブルートゥースエラー: BT-%1"
 "[english]BluetoothControllerStatus_ServiceError"	"Bluetooth Error: BT-%1"
@@ -2055,7 +2055,7 @@
 "[english]Settings_DebugInputBindings"	"Enable debugging options in the input binding user interface"
 "Settings_Advanced_MotionSmoothing"	"モーションスムージングを有効化"
 "[english]Settings_Advanced_MotionSmoothing"	"Enable motion smoothing"
-"Settings_Advanced_MotionSmoothing_Disabled"	"モーションスムージングは利用できません。Windows 10 とドライバ %2 以降の %1 GPU が必須です。"
+"Settings_Advanced_MotionSmoothing_Disabled"	"モーションスムージングがこのGPUではサポートされていないか、ドライバーが最新ではありません。"
 "[english]Settings_Advanced_MotionSmoothing_Disabled"	"Motion Smoothing is not supported on this gpu or drivers are out of date."
 "Advanced_MotionEstimationActive"	"モーションスムージング オン"
 "[english]Advanced_MotionEstimationActive"	"Motion Smoothing On"
