--- a/resources/webinterface/dashboard/localization/bindingui_dutch.json
+++ b/resources/webinterface/dashboard/localization/bindingui_dutch.json
@@ -64,41 +64,41 @@
   "SourceInputMode_SmoothScroll_Deceleration": "Vertraging:",
   "SourceInputMode_SmoothScroll_MinLastVelocitiesToAverage": "Minimale vorige snelheden om te middelen:",
   "SourceInputMode_SmoothScroll_MaxLastVelocitiesToAverage": "Maximale vorige snelheden om te middelen:",
-  "SourceInputMode_SmoothScroll_ThrownTerminationVelocity": "Thrown Termination Velocity:",
-  "SourceInputMode_SmoothScroll_EdgeScrollThreshold": "Edge Scroll Threshold:",
-  "SourceInputMode_SmoothScroll_EdgeScrollThresholdVerticalBias": "Edge Scroll Threshold Vertical Bias:",
-  "SourceInputMode_SmoothScroll_EdgeScrollVelocity": "Edge Scroll Velocity:",
-  "SourceInputMode_SmoothScroll_EdgeMinSwipe": "Minimum Swipe For Edge Scroll:",
+  "SourceInputMode_SmoothScroll_ThrownTerminationVelocity": "Snelheid waarbij worp eindigt:",
+  "SourceInputMode_SmoothScroll_EdgeScrollThreshold": "Drempelwaarde randscrollen:",
+  "SourceInputMode_SmoothScroll_EdgeScrollThresholdVerticalBias": "Drempelwaarde randscrollen (verticale compensatie):",
+  "SourceInputMode_SmoothScroll_EdgeScrollVelocity": "Snelheid randscrollen:",
+  "SourceInputMode_SmoothScroll_EdgeMinSwipe": "Minimale veeg voor randscrollen:",
   "SourceInputMode_SmoothScroll_MinSideScrollRatio": "Benodigde verhouding voor horizontaal scrollen:",
   "SourceInputMode_SmoothScroll_Joystick_MinInputMagnitude": "Minimale invoergrootte:",
   "SourceInputMode_DiscreteScroll_Trackpad_GlobalScaleFactor": "Scrollschaal:",
   "SourceInputMode_DiscreteScroll_Trackpad_HapticOnTouchStart": "Haptische feedback bij aanraken:",
-  "SourceInputMode_DiscreteScroll_Trackpad_DirectDirectionLock": "Reversal Supression Enabled:",
+  "SourceInputMode_DiscreteScroll_Trackpad_DirectDirectionLock": "Onderdrukking van omkeren ingeschakeld:",
   "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnTouch": "Aanraakgevoeligheid:",
   "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnMove": "Veeggevoeligheid:",
-  "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnReversal": "Reversal Sensitivity:",
+  "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnReversal": "Omkeergevoeligheid:",
   "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnTouch": "Begindrempel:",
   "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnMove": "Bewegingsdrempel:",
   "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnReversal": "Omkeringsdrempel:",
   "SourceInputMode_DiscreteScroll_Trackpad_FlickEnabled": "Scrollen door schudden ingeschakeld:",
   "SourceInputMode_DiscreteScroll_Trackpad_FlickThreshold": "Schuddrempel:",
-  "SourceInputMode_DiscreteScroll_Trackpad_FlickScrollMultiplier": "Flick Scroll Multiplier:",
-  "SourceInputMode_DiscreteScroll_Trackpad_FlickThrowSpeed": "Flick Momentum:",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldEnabled": "Slide and Hold Scrolling:",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldScaleFactor": "S&H Multiplier:",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldPulseRate": "S&H Pulse Rate:",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldBorderTop": "S&H Top Border:",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldBorderBottom": "S&H Bottom Border:",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldHapticEnabled": "S&H Haptic:",
+  "SourceInputMode_DiscreteScroll_Trackpad_FlickScrollMultiplier": "Vermenigvuldiger voor scrollen door schudden:",
+  "SourceInputMode_DiscreteScroll_Trackpad_FlickThrowSpeed": "Schudmomentum:",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldEnabled": "Scrollen door glijden en vasthouden:",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldScaleFactor": "Vermenigvuldiger glijden en vasthouden:",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldPulseRate": "Pulseerfrequentie glijden en vasthouden:",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldBorderTop": "Bovenste rand voor glijden en vasthouden:",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldBorderBottom": "Onderste rand voor glijden en vasthouden:",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldHapticEnabled": "Haptische feedback voor glijden en vasthouden:",
   "SourceInputMode_DiscreteScroll_Joystick_ScrollRateFactor": "Scrollsnelheid:",
   "SourceInputMode_DiscreteScroll_Joystick_ScrollScaleFactor": "Scrollschaal:",
   "SourceInputMode_DiscreteScroll_Joystick_Deadzone_Horizontal": "Dode zone (horizontaal):",
   "SourceInputMode_DiscreteScroll_Joystick_Deadzone_Vertical": "Dode zone (verticaal):",
   "SourceInputMode_InvertYAxis": "Y-as omkeren:",
   "SourceInputMode_InvertXAxis": "X-as omkeren:",
-  "SourceInputMode_StickyClick": "Keep thumbstick clicked while stick is deflected",
-  "SourceInputMode_StickyClick_Activate": "Deflection activation threshold",
-  "SourceInputMode_StickyClick_Deactivate": "Deflection deactivation threshold",
+  "SourceInputMode_StickyClick": "Analoge stick ingedrukt houden terwijl je hem in een richting beweegt",
+  "SourceInputMode_StickyClick_Activate": "Drempel waarbij een richting wordt geactiveerd",
+  "SourceInputMode_StickyClick_Deactivate": "Drempel waarbij een richting wordt gedeactiveerd",
   "SourceInputMode_ButtonModeInputForce_Click": "Klik genereren van:",
   "SourceInputMode_Grab": "Pakken",
   "SourceInputMode_CapsenseEnableThreshold": "Drempel CapSense inschakelen:",
@@ -123,14 +123,14 @@
   "SourceInputMode_MoreOptions": "Meer opties",
   "SourceInputMode_FewerOptions": "Minder opties",
   "SourceInputAction_none": "Geen",
-  "SourceInputAction_NoItems": "None in action set",
-  "SourceInputSubHeader_BooleanActions": "Boolean Actions",
-  "SourceInputSubHeader_Vector1Actions": "Vector1 Actions",
-  "SourceInputSubHeader_Vector2Actions": "Vector2 Actions",
-  "SourceInputSubHeader_Vector3Actions": "Vector3 Actions",
-  "SourceInputSubHeader_SkeletonActions": "Skeleton Actions",
-  "SourceInputSubHeader_PoseActions": "Pose Actions",
-  "SourceInputSubHeader_HapticsActions": "Haptic Actions",
+  "SourceInputAction_NoItems": "Geen in actieset",
+  "SourceInputSubHeader_BooleanActions": "Booleaanse acties",
+  "SourceInputSubHeader_Vector1Actions": "Vector1-acties",
+  "SourceInputSubHeader_Vector2Actions": "Vector2-acties",
+  "SourceInputSubHeader_Vector3Actions": "Vector3-acties",
+  "SourceInputSubHeader_SkeletonActions": "Skeletacties",
+  "SourceInputSubHeader_PoseActions": "Houdingacties",
+  "SourceInputSubHeader_HapticsActions": "Haptische acties",
   "BindingUI_PoseTitle": "Houdingsconfiguraties",
   "BindingUI_HapticsTitle": "Haptische configuraties",
   "BindingUI_SkeletonTitle": "Skeletconfiguraties",
@@ -196,8 +196,8 @@
   "BindingUI_List_Edit": "Bewerken",
   "BindingUI_List_View": "Weergeven",
   "BindingUI_List_LastUpdated": "Laatst bijgewerkt: ",
-  "BindingUI_List_MinutesPlayed": "Played for %1$s minutes total",
-  "BindingUI_List_MinutesPlayedThisMonth": "Played for %1$s minutes in the last 30 days",
+  "BindingUI_List_MinutesPlayed": "In totaal %1$s minuten gespeeld",
+  "BindingUI_List_MinutesPlayedThisMonth": "%1$s minuten gespeeld in de afgelopen 30 dagen",
   "BindingUI_List_NoBindingsFound": "Geen configuraties gevonden",
   "BindingUI_List_CreateBinding": "Nieuwe configuratie maken",
   "BindingUI_Mode_Delete_Confirm": "%1$s-modus van %2$s verwijderen?",
@@ -215,14 +215,14 @@
   "BindingUI_SaveTitle": "Configuratie opslaan",
   "BindingUI_SaveBinding": "Opslaan",
   "BindingUI_SaveDefaultName": "Mijn %1$s-configuratie voor %2$s",
-  "BindingUI_SaveDefaultName_Personal": "Saved %1$s configuration for %2$s",
-  "BindingUI_SaveDefaultName_Public": "Shared binding from %1$s",
+  "BindingUI_SaveDefaultName_Personal": "%1$s-configuratie opgeslagen voor %2$s",
+  "BindingUI_SaveDefaultName_Public": "Gedeelde configuratie van %1$s",
   "BindingUI_SaveDescriptionPlaceholder": "(Optioneel)",
   "BindingUI_SelectThisBinding": "Deze configuratie selecteren",
   "BindingUI_EditThisBinding": "Deze configuratie bewerken",
-  "BindingUI_ImportThisBinding": "Import this Binding",
-  "BindingUI_List_OldVersionWarning": "These bindings were made with an older version of %1$s and need to be updated.",
-  "BindingUI_List_OldVersionWarning_CurrentBinding": "These bindings were made with an older version of %1$s and may not include all necessary actions.",
+  "BindingUI_ImportThisBinding": "Deze configuratie importeren",
+  "BindingUI_List_OldVersionWarning": "Deze configuraties zijn ingesteld met een oudere versie van %1$s en moeten worden bijgewerkt.",
+  "BindingUI_List_OldVersionWarning_CurrentBinding": "Deze configuraties zijn ingesteld met een oudere versie van %1$s en bevatten mogelijk niet alle benodigde acties.",
   "BindingUI_SelectAction_Required": "Vereist",
   "BindingUI_SelectAction_Suggested": "Voorgesteld",
   "SaveError_BindingWriteFailed": "Configuratiebestand schrijven mislukt. Is het tegen schrijven beveiligd?",
@@ -233,17 +233,17 @@
   "AppSelect_RecentApp": "Recente toepassingen",
   "AppSelect_CompositorName": "SteamVR-dashboard",
   "AppSelect_CoreSteamVRApps": "SteamVR-hoofdtoepassingen",
-  "AppSelect_ControllerTester": "Test Controller",
-  "AppSelect_LegacyDebug": "Debug Legacy Input",
-  "AppSelect_ShowMoreApps": "Show More Applications",
-  "AppSelect_EditBindings": "Edit Controller Bindings",
+  "AppSelect_ControllerTester": "Controller testen",
+  "AppSelect_LegacyDebug": "Fouten opsporen in klassieke invoer",
+  "AppSelect_ShowMoreApps": "Meer toepassingen tonen",
+  "AppSelect_EditBindings": "Controllerconfiguraties bewerken",
   "BindingList_PageTitle": "Configuraties voor %1$s wijzigen",
   "BindingList_ControllerOption": "Huidige controller",
   "BindingUI_List_Delete_Confirm": "Configuratie %1$s permanent verwijderen?",
-  "BindingUI_ConfirmSelect_Title": "Replace current binding?",
+  "BindingUI_ConfirmSelect_Title": "Huidige configuratie vervangen?",
   "BindingUI_List_Select_Confirm": "Je hebt niet-opgeslagen wijzigingen voor je huidige configuratie. Wil je deze wijzigingen verwerpen of ze opslaan als persoonlijke configuratie voordat je het gebruikt?",
-  "BindingUI_List_Select_Confirm_Convert": "You also have unsaved changes for your current binding. Updating this binding will discard those changes, or you can save them as a personal bind before updating this bind?",
-  "BindingUI_List_Upgrade_Confirm": "This binding is from a previous version of %1$s. You may need to bind additional actions in order to make it work.",
+  "BindingUI_List_Select_Confirm_Convert": "Je hebt ook niet-opgeslagen wijzigingen voor je huidige configuratie. Als je deze configuratie bijwerkt, gaan deze wijzigingen verloren. Wil je deze wijzigingen opslaan als persoonlijke configuratie voordat je de configuratie bijwerkt?",
+  "BindingUI_List_Upgrade_Confirm": "Deze configuratie stamt uit een vorige versie van %1$s. Het is mogelijk dat je er bijkomende acties aan moet toevoegen om het goed te laten functioneren.",
   "BindingUI_List_Developer_Binding_Title": "Officiële configuraties voor %1$s",
   "BindingUI_List_Developer_Binding_Description": "Dit zijn de officiële configuraties die door de ontwikkelaar van dit spel zijn gepubliceerd.",
   "BindingUI_List_Legacy_Binding_Title": "Standaard configuraties voor %1$s",
@@ -252,12 +252,12 @@
   "BindingUI_List_Autosave": "%1$s (lokale wijzigingen)",
   "BindingList_TrackerEdit": "Trackers beheren",
   "Button_Import": "Importeren",
-  "PreservedAutosaveName": "Preserved local changes before upgrade",
+  "PreservedAutosaveName": "Lokale wijzigingen die voor de upgrade werden behouden",
   "BindingUI_SteamVRUnavailable": "Voer SteamVR uit om de configuratie-interface te blijven gebruiken",
   "BindingUI_ErrorLoadingBindingTitle": "Configuratiebestand laden mislukt",
   "input_binding_load_failed": "Invoerconfiguraties voor %1$s laden mislukt. Selecteer een andere configuratieoptie.",
   "input_binding_load_failed_no_url": "Configuratie %2$s voor %1$s is niet ingesteld. Selecteer een configuratieoptie uit de lijst of maak er zelf een.",
-  "input_binding_load_below_minimum_version": "%2$s binding for %1$s was from older version of %1$s. Your bindings have been set back to the default.",
+  "input_binding_load_below_minimum_version": "%2$s-configuratie voor %1$s stamt uit een oudere versie van %1$s. Je configuraties zijn teruggezet naar de standaardinstellingen.",
   "unknown_application": "Onbekende toepassing",
   "TestController_Title": "Controllers testen",
   "InputDebugger_Title": "Invoerdebugger",
@@ -280,17 +280,17 @@
   "TrackerEditor_SelectRole": "Rol selecteren:",
   "TrackerEditor_SelectControllerRole": "Welke handen:",
   "DisplaySettings_Title": "Weergave-instellingen",
-  "DisplaySettings_DisplayBrightness": "Display Brightness",
+  "DisplaySettings_DisplayBrightness": "Helderheid van weergave",
   "DisplaySettings_ColumnCorrection": "Kolomcorrectie",
-  "DisplaySettings_ColumnCorrectionDesc": "Column Correction mitigates vertical \"screendoor\" during head motion. Most users should leave it enabled, with fine adjustment of 0.",
-  "DisplaySettings_Error_FirmwareUpdateNeeded": "A firmware update is required to enable Display Settings customizations.",
-  "DisplaySettings_EnableColumnCorrection": "Column Correction",
+  "DisplaySettings_ColumnCorrectionDesc": "Kolomcorrectie vermindert verticale 'screendoor' tijdens hoofdbewegingen. We raden aan om het ingeschakeld te houden, met een bijstelling van 0.",
+  "DisplaySettings_Error_FirmwareUpdateNeeded": "Een firmware-update is vereist om aanpassingen aan weergave-instellingen te kunnen doen.",
+  "DisplaySettings_EnableColumnCorrection": "Kolomcorrectie",
   "DisplaySettings_AdvancedSettings": "Geavanceerde instellingen",
   "DisplaySettings_ShowAdvancedSettings": "Geavanceerde instellingen weergeven",
   "DisplaySettings_HideAdvancedSettings": "Geavanceerde instellingen verbergen",
-  "DisplaySettings_ResetAdvancedSettings": "Use Recommended Advanced Settings",
-  "DisplaySettings_ColumnCorrectionBiasLeft": "Fine Adjustment (Left)",
-  "DisplaySettings_ColumnCorrectionBiasRight": "Fine Adjustment (Right)",
+  "DisplaySettings_ResetAdvancedSettings": "Aanbevolen geavanceerde instellingen gebruiken",
+  "DisplaySettings_ColumnCorrectionBiasLeft": "Fijnafstelling (links)",
+  "DisplaySettings_ColumnCorrectionBiasRight": "Fijnafstelling (rechts)",
   "DisplaySettings_ColumnCorrectionBiasLinked": "Gekoppeld",
   "SaveNotice_Saving": "Opslaan...",
   "SaveNotice_Uploading": "Uploaden...",
@@ -303,24 +303,25 @@
   "HideActionButton": "Verbergen",
   "LegacySetup_SimulatedActionHeader": "Gesimuleerde acties",
   "LegacySetup_ActionAliasesHeader": "Actie-aliassen",
-  "SimulatedAction_FakeTrigger": "Simulated Trigger Pull",
-  "SimulatedAction_FakeTrackpadClick": "Simulated Trackpad Click",
+  "SimulatedAction_FakeTrigger": "Gesimuleerd overhalen van trekker",
+  "SimulatedAction_FakeTrackpadClick": "Gesimuleerde klik trackpad",
   "TrackpadClickLeft": "Linkertrackpad",
   "TrackpadClickRight": "Rechtertrackpad",
   "TrackpadClickNone": "Trackpad selecteren",
   "SecondaryControllerTab": "Extra instellingen",
   "SecondaryController_ReturnWithLeftHand": "Configuratie met de linkerhand terugsturen",
   "SecondaryController_ReturnWithRightHand": "Configuratie met de rechterhand terugsturen",
-  "Settings_ThumbstickDeadzone_Text": "Thumbstick Deadzone:",
-  "Settings_ControllerSettings_Title": "Thumbstick Settings",
-  "Settings_ControllerSettings_Utilities": "Controller Utilities",
+  "SecondaryController_ReturnWithHead": "Configuratie met HMD terugsturen",
+  "Settings_ThumbstickDeadzone_Text": "Dode zone analoge stick:",
+  "Settings_ControllerSettings_Title": "Instellingen analoge stick",
+  "Settings_ControllerSettings_Utilities": "Hulpprogramma's controller",
   "Settings_General_Cancel": "Annuleren",
   "Settings_General_Confirm": "Bevestigen",
   "Settings_General_CalibrateThumbstick": "Kalibreren",
-  "Settings_General_NotEnoughSamples": "Please press up on the thumbstick at least %1$s more times to complete calibration.",
-  "Settings_General_InviteMoreSamples": "Calculated angle of %1$s degrees. Keep pressing up to refine that value or press Confirm to accept this calibration.",
-  "Settings_General_LeftThumbstickAngle": "Left Thumbstick Angle: %1$s°",
-  "Settings_General_RightThumbstickAngle": "Right Thumbstick Angle: %1$s°",
+  "Settings_General_NotEnoughSamples": "Druk nog minstens %1$s keer naar boven op de analoge stick om het kalibreren af te ronden.",
+  "Settings_General_InviteMoreSamples": "Berekende hoek: %1$s graden. Blijf naar boven toe drukken om die waarde verder af te stellen of druk op 'Bevestigen' om deze kalibratie te aanvaarden.",
+  "Settings_General_LeftThumbstickAngle": "Hoek analoge stick (links): %1$s°",
+  "Settings_General_RightThumbstickAngle": "Hoek analoge stick (rechts): %1$s°",
   "Settings_General_Reset": "Resetten",
-  "LegacyDebugger_NoApp": "Run any legacy input application to see its input data here."
+  "LegacyDebugger_NoApp": "Voer een toepassing met klassieke invoer uit om de invoergegevens hier te zien."
 }
