--- a/resources/webinterface/dashboard/localization/bindingui_turkish.json
+++ b/resources/webinterface/dashboard/localization/bindingui_turkish.json
@@ -50,50 +50,50 @@
   "SourceInputMode_StickyDpad": "Persist Dpad action once activated",
   "SourceInputMode_LongPressDelay": "Uzun basma gecikmesi:",
   "SourceInputMode_DoublePressDelay": "Çift basma gecikmesi:",
-  "SourceInputMode_DeadZone": "DeadZone",
+  "SourceInputMode_DeadZone": "Ölü Bölge",
   "SourceInputMode_ScrollMode": "Kaydırma modu:",
   "SourceInputMode_ScrollMode_Smooth": "Yumuşak (Yön kumandası gibi)",
   "SourceInputMode_ScrollMode_Discrete": "Gizli (Fare tekerleği gibi)",
   "SourceInputMode_SmoothScroll_TrackpadAspectRatio": "Yön Kumandası En Boy Oranı (genişlik/yükseklik):",
   "SourceInputMode_SmoothScroll_Multiplier": "Kaydırma Çarpanı:",
   "SourceInputMode_SmoothScroll_AccelerationPower": "Hızlanma Gücü:",
-  "SourceInputMode_SmoothScroll_NotchesPerTouchpad": "Haptic Notches Per Trackpad Height:",
+  "SourceInputMode_SmoothScroll_NotchesPerTouchpad": "Yön Kumandası Yüksekliği Başına Haptik Çentik Sayısı:",
   "SourceInputMode_SmoothScroll_StartDistance": "En Düşük Kaydırma Mesafesi:",
   "SourceInputMode_SmoothScroll_MinThrowVelocity": "En Düşük Fırlatma Hızı:",
   "SourceInputMode_SmoothScroll_MaxScrollVelocity": "En Yüksek Kaydırma Hızı:",
   "SourceInputMode_SmoothScroll_Deceleration": "Yavaşlama Miktarı:",
-  "SourceInputMode_SmoothScroll_MinLastVelocitiesToAverage": "Minimum Previous Velocities To Average:",
-  "SourceInputMode_SmoothScroll_MaxLastVelocitiesToAverage": "Maximum Previous Velocities To Average:",
-  "SourceInputMode_SmoothScroll_ThrownTerminationVelocity": "Thrown Termination Velocity:",
-  "SourceInputMode_SmoothScroll_EdgeScrollThreshold": "Edge Scroll Threshold:",
-  "SourceInputMode_SmoothScroll_EdgeScrollThresholdVerticalBias": "Edge Scroll Threshold Vertical Bias:",
-  "SourceInputMode_SmoothScroll_EdgeScrollVelocity": "Edge Scroll Velocity:",
-  "SourceInputMode_SmoothScroll_EdgeMinSwipe": "Minimum Swipe For Edge Scroll:",
-  "SourceInputMode_SmoothScroll_MinSideScrollRatio": "Ratio Needed For Horizontal Scroll:",
-  "SourceInputMode_SmoothScroll_Joystick_MinInputMagnitude": "Minimum Input Magnitude:",
+  "SourceInputMode_SmoothScroll_MinLastVelocitiesToAverage": "Ortalaması Alınacak Minimum Eski Hız Sayısı:",
+  "SourceInputMode_SmoothScroll_MaxLastVelocitiesToAverage": "Ortalaması Alınacak Maksimum Eski Hız Sayısı:",
+  "SourceInputMode_SmoothScroll_ThrownTerminationVelocity": "Fırlatmayı Sona Erdirme Hızı:",
+  "SourceInputMode_SmoothScroll_EdgeScrollThreshold": "Kenar Kaydırma Eşiği:",
+  "SourceInputMode_SmoothScroll_EdgeScrollThresholdVerticalBias": "Kenar Kaydırma Eşiği Dikey Sapması:",
+  "SourceInputMode_SmoothScroll_EdgeScrollVelocity": "Kenar Kaydırma Hızı:",
+  "SourceInputMode_SmoothScroll_EdgeMinSwipe": "Kenar Kaydırma İçin Gereken En Az Kaydırma:",
+  "SourceInputMode_SmoothScroll_MinSideScrollRatio": "Yatay Kaydırma İçin Gereken Oran:",
+  "SourceInputMode_SmoothScroll_Joystick_MinInputMagnitude": "Minimum Girdi Büyüklüğü:",
   "SourceInputMode_DiscreteScroll_Trackpad_GlobalScaleFactor": "Kaydırma Ölçeği:",
   "SourceInputMode_DiscreteScroll_Trackpad_HapticOnTouchStart": "Haptic On Touch:",
-  "SourceInputMode_DiscreteScroll_Trackpad_DirectDirectionLock": "Reversal Supression Enabled:",
+  "SourceInputMode_DiscreteScroll_Trackpad_DirectDirectionLock": "Ters Bastırma Etkin:",
   "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnTouch": "Dokunma Hassaslığı:",
   "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnMove": "Kaydırma Hassaslığı:",
-  "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnReversal": "Reversal Sensitivity:",
+  "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnReversal": "Ters Yön Hassaslığı:",
   "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnTouch": "Başlatma Eşiği:",
   "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnMove": "Hareket Eşiği:",
-  "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnReversal": "Reversal Threshold:",
-  "SourceInputMode_DiscreteScroll_Trackpad_FlickEnabled": "Flick Scrolling Enabled:",
-  "SourceInputMode_DiscreteScroll_Trackpad_FlickThreshold": "Flick Threshold:",
-  "SourceInputMode_DiscreteScroll_Trackpad_FlickScrollMultiplier": "Flick Scroll Multiplier:",
-  "SourceInputMode_DiscreteScroll_Trackpad_FlickThrowSpeed": "Flick Momentum:",
+  "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnReversal": "Ters Yön Eşiği:",
+  "SourceInputMode_DiscreteScroll_Trackpad_FlickEnabled": "Hızlı Kaydırma Etkin:",
+  "SourceInputMode_DiscreteScroll_Trackpad_FlickThreshold": "Hızlı Kaydırma Eşiği:",
+  "SourceInputMode_DiscreteScroll_Trackpad_FlickScrollMultiplier": "Hızlı Kaydırma Çarpanı:",
+  "SourceInputMode_DiscreteScroll_Trackpad_FlickThrowSpeed": "Hızlı Kaydırma İvmesi:",
   "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldEnabled": "Slide and Hold Scrolling:",
   "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldScaleFactor": "S&H Multiplier:",
   "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldPulseRate": "S&H Pulse Rate:",
   "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldBorderTop": "S&H Top Border:",
   "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldBorderBottom": "S&H Bottom Border:",
   "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldHapticEnabled": "S&H Haptic:",
-  "SourceInputMode_DiscreteScroll_Joystick_ScrollRateFactor": "Scroll Rate:",
-  "SourceInputMode_DiscreteScroll_Joystick_ScrollScaleFactor": "Scroll Scale:",
-  "SourceInputMode_DiscreteScroll_Joystick_Deadzone_Horizontal": "DeadZone H:",
-  "SourceInputMode_DiscreteScroll_Joystick_Deadzone_Vertical": "DeadZone V:",
+  "SourceInputMode_DiscreteScroll_Joystick_ScrollRateFactor": "Kaydırma Hızı:",
+  "SourceInputMode_DiscreteScroll_Joystick_ScrollScaleFactor": "Kaydırma Ölçeği:",
+  "SourceInputMode_DiscreteScroll_Joystick_Deadzone_Horizontal": "Ölü Bölge Y:",
+  "SourceInputMode_DiscreteScroll_Joystick_Deadzone_Vertical": "Ölü Bölge D:",
   "SourceInputMode_InvertYAxis": "Y eksenini ters çevir:",
   "SourceInputMode_InvertXAxis": "X eksenini ters çevir:",
   "SourceInputMode_StickyClick": "Keep thumbstick clicked while stick is deflected",
@@ -124,13 +124,13 @@
   "SourceInputMode_FewerOptions": "Daha az seçenek",
   "SourceInputAction_none": "Yok",
   "SourceInputAction_NoItems": "None in action set",
-  "SourceInputSubHeader_BooleanActions": "Boolean Actions",
-  "SourceInputSubHeader_Vector1Actions": "Vector1 Actions",
-  "SourceInputSubHeader_Vector2Actions": "Vector2 Actions",
-  "SourceInputSubHeader_Vector3Actions": "Vector3 Actions",
-  "SourceInputSubHeader_SkeletonActions": "Skeleton Actions",
-  "SourceInputSubHeader_PoseActions": "Pose Actions",
-  "SourceInputSubHeader_HapticsActions": "Haptic Actions",
+  "SourceInputSubHeader_BooleanActions": "Boole Eylemleri",
+  "SourceInputSubHeader_Vector1Actions": "Vektör1 Eylemleri",
+  "SourceInputSubHeader_Vector2Actions": "Vektör2 Eylemleri",
+  "SourceInputSubHeader_Vector3Actions": "Vektör3 Eylemleri",
+  "SourceInputSubHeader_SkeletonActions": "İskelet Eylemleri",
+  "SourceInputSubHeader_PoseActions": "Duruş Eylemleri",
+  "SourceInputSubHeader_HapticsActions": "Haptik Eylemleri",
   "BindingUI_PoseTitle": "Duruş Atamaları",
   "BindingUI_HapticsTitle": "Haptik Atamaları",
   "BindingUI_SkeletonTitle": "İskelet Atamaları",
@@ -196,8 +196,8 @@
   "BindingUI_List_Edit": "Düzenle",
   "BindingUI_List_View": "Görüntüle",
   "BindingUI_List_LastUpdated": "Son Güncelleme: ",
-  "BindingUI_List_MinutesPlayed": "Played for %1$s minutes total",
-  "BindingUI_List_MinutesPlayedThisMonth": "Played for %1$s minutes in the last 30 days",
+  "BindingUI_List_MinutesPlayed": "Toplam %1$s dakika oynandı",
+  "BindingUI_List_MinutesPlayedThisMonth": "Son 30 günde %1$s dakika oynandı",
   "BindingUI_List_NoBindingsFound": "Atama Bulunamadı",
   "BindingUI_List_CreateBinding": "Yeni Tuş Ataması Oluştur",
   "BindingUI_Mode_Delete_Confirm": "%1$s modu buradan silinsin mi: %2$s",
@@ -215,7 +215,7 @@
   "BindingUI_SaveTitle": "Atamanızı kaydedin",
   "BindingUI_SaveBinding": "Kaydet",
   "BindingUI_SaveDefaultName": "%1$s için %2$s yapılandırmam",
-  "BindingUI_SaveDefaultName_Personal": "Saved %1$s configuration for %2$s",
+  "BindingUI_SaveDefaultName_Personal": "%2$s için %1$s yapılandırması kaydedildi",
   "BindingUI_SaveDefaultName_Public": "Shared binding from %1$s",
   "BindingUI_SaveDescriptionPlaceholder": "(Tercihe Bağlı)",
   "BindingUI_SelectThisBinding": "Bu Atamayı Seç",
@@ -227,22 +227,22 @@
   "BindingUI_SelectAction_Suggested": "Önerilen",
   "SaveError_BindingWriteFailed": "Atama dosyası yazılamadı. Dosya yazma korumalı mı?",
   "SaveError_ActionManifestWriteFailed": "Eylem bildirimi dosyası yazılamadı. Dosya yazma korumalı mı?",
-  "AppSelect_Title": "Düzenlemek istediğiniz uygulamayı seçin",
+  "AppSelect_Title": "Kontrolcü Ayarları",
   "AppSelect_CurrentApp": "Şu Anki Uygulama",
   "AppSelect_LastRunApp": "Son Çalıştırılan Uygulama",
   "AppSelect_RecentApp": "Son Kullanılan Uygulamalar",
   "AppSelect_CompositorName": "SteamVR Panosu",
   "AppSelect_CoreSteamVRApps": "SteamVR Temel Uygulamaları",
-  "AppSelect_ControllerTester": "Test Controller",
-  "AppSelect_LegacyDebug": "Debug Legacy Input",
-  "AppSelect_ShowMoreApps": "Show More Applications",
+  "AppSelect_ControllerTester": "Test Kontrolcüsü",
+  "AppSelect_LegacyDebug": "Eski Girdilerde Hata Ayıkla",
+  "AppSelect_ShowMoreApps": "Daha Fazla Uygulama Göster",
   "AppSelect_EditBindings": "Edit Controller Bindings",
   "BindingList_PageTitle": "%1$s atamalarını değiştir",
   "BindingList_ControllerOption": "Mevcut Kontrolcü",
   "BindingUI_List_Delete_Confirm": "%1$s ataması kalıcı olarak silinsin mi?",
-  "BindingUI_ConfirmSelect_Title": "Replace current binding?",
+  "BindingUI_ConfirmSelect_Title": "Mevcut atama değiştirilsin mi?",
   "BindingUI_List_Select_Confirm": "Mevcut atama için kaydedilmemiş değişiklikleriniz bulunuyor. Bu atamayı kullanmadan önce ilgili atamaları iptal etmek mi yoksa kişisel atama olarak kaydetmek mi istersiniz?",
-  "BindingUI_List_Select_Confirm_Convert": "You also have unsaved changes for your current binding. Updating this binding will discard those changes, or you can save them as a personal bind before updating this bind?",
+  "BindingUI_List_Select_Confirm_Convert": "Mevcut atama için kaydedilmemiş değişiklikleriniz bulunuyor. Bu atamanın güncellenmesi bu değişiklikleri iptal eder, bu atamayı güncellemeden önce bunları kişisel atama olarak kaydedebilirsiniz.",
   "BindingUI_List_Upgrade_Confirm": "This binding is from a previous version of %1$s. You may need to bind additional actions in order to make it work.",
   "BindingUI_List_Developer_Binding_Title": "Resmî %1$s atamaları",
   "BindingUI_List_Developer_Binding_Description": "Bunlar, oyununun geliştiricisi tarafından yayınlanan resmî atamalardır",
@@ -259,7 +259,7 @@
   "input_binding_load_failed_no_url": "%1$s için %2$s tuş ataması ayarlanmadı. Lütfen listeden bir tuş ataması seçin veya yeni bir tane oluşturun.",
   "input_binding_load_below_minimum_version": "%2$s binding for %1$s was from older version of %1$s. Your bindings have been set back to the default.",
   "unknown_application": "Bilinmeyen Uygulama",
-  "TestController_Title": "Test Controllers",
+  "TestController_Title": "Test Kontrolcüleri",
   "InputDebugger_Title": "Girdi Hata Ayıklayıcısı",
   "InputDebugger_Actions": "Eylemler",
   "InputDebugger_Filters": "Filtreler",
@@ -267,10 +267,10 @@
   "InputDebugger_UnknownPath": "/?",
   "InputDebugger_Unbound": "İlişiksiz",
   "BindingUI_InputDebugger": "Girdi Hata Ayıklayıcısı",
-  "BindingUI_WindowTitle_ControllerSettings": "Controller Settings",
+  "BindingUI_WindowTitle_ControllerSettings": "Kontrolcü Ayarları",
   "BindingUI_WindowTitle_ControllerBinding": "Kontrolcü Yapılandırması",
   "BindingUI_WindowTitle_ManageTrackers": "Vive Takipçilerini Yönet",
-  "BindingUI_WindowTitle_DisplaySettings": "Display Settings",
+  "BindingUI_WindowTitle_DisplaySettings": "Görüntü Ayarları",
   "ActionManifestError_ManifestParseError": "%1$s eylem bildiriminde bir sorun var: \"%2$s\".",
   "ActionManifestError_FileNotFound": "%1$s eylem bildirimi bulunamadı.",
   "ActionManifestError_JSONParseError": "%1$s eylem bildirimi, geçerli JSON içermiyordu.",
@@ -279,19 +279,19 @@
   "TrackerEditor_BuzzTracker": "Takipçileri Tanımla",
   "TrackerEditor_SelectRole": "Rol Seç:",
   "TrackerEditor_SelectControllerRole": "Hangi eller:",
-  "DisplaySettings_Title": "Display Settings",
-  "DisplaySettings_DisplayBrightness": "Display Brightness",
-  "DisplaySettings_ColumnCorrection": "Column Correction",
+  "DisplaySettings_Title": "Görüntü Ayarları",
+  "DisplaySettings_DisplayBrightness": "Ekran Parlaklığı",
+  "DisplaySettings_ColumnCorrection": "Sütun Düzeltmesi",
   "DisplaySettings_ColumnCorrectionDesc": "Column Correction mitigates vertical \"screendoor\" during head motion. Most users should leave it enabled, with fine adjustment of 0.",
-  "DisplaySettings_Error_FirmwareUpdateNeeded": "A firmware update is required to enable Display Settings customizations.",
-  "DisplaySettings_EnableColumnCorrection": "Column Correction",
-  "DisplaySettings_AdvancedSettings": "Advanced Settings",
-  "DisplaySettings_ShowAdvancedSettings": "Show Advanced Settings",
-  "DisplaySettings_HideAdvancedSettings": "Hide Advanced Settings",
-  "DisplaySettings_ResetAdvancedSettings": "Use Recommended Advanced Settings",
-  "DisplaySettings_ColumnCorrectionBiasLeft": "Fine Adjustment (Left)",
-  "DisplaySettings_ColumnCorrectionBiasRight": "Fine Adjustment (Right)",
-  "DisplaySettings_ColumnCorrectionBiasLinked": "Linked",
+  "DisplaySettings_Error_FirmwareUpdateNeeded": "Görüntü Ayarları özelleştirmelerini etkinleştirmek için yazılım güncellemesi gereklidir.",
+  "DisplaySettings_EnableColumnCorrection": "Sütun Düzeltmesi",
+  "DisplaySettings_AdvancedSettings": "Gelişmiş Ayarlar",
+  "DisplaySettings_ShowAdvancedSettings": "Gelişmiş Ayarları Göster",
+  "DisplaySettings_HideAdvancedSettings": "Gelişmiş Ayarları Gizle",
+  "DisplaySettings_ResetAdvancedSettings": "Önerilen Gelişmiş Ayarları Kullan",
+  "DisplaySettings_ColumnCorrectionBiasLeft": "İnce Ayar (Sol)",
+  "DisplaySettings_ColumnCorrectionBiasRight": "İnce Ayar (Sağ)",
+  "DisplaySettings_ColumnCorrectionBiasLinked": "Bağlandı",
   "SaveNotice_Saving": "Kaydediliyor...",
   "SaveNotice_Uploading": "Yükleniyor...",
   "LegacySetupTab": "Eski Eylemleri Ayarla",
@@ -308,19 +308,20 @@
   "TrackpadClickLeft": "Sol Yön Kumandası",
   "TrackpadClickRight": "Sağ Yön Kumandası",
   "TrackpadClickNone": "Yön Kumandası Seç",
-  "SecondaryControllerTab": "Extra Settings",
+  "SecondaryControllerTab": "Ekstra Ayarlar",
   "SecondaryController_ReturnWithLeftHand": "Return bindings with left hand",
   "SecondaryController_ReturnWithRightHand": "Return bindings with right hand",
-  "Settings_ThumbstickDeadzone_Text": "Thumbstick Deadzone:",
-  "Settings_ControllerSettings_Title": "Thumbstick Settings",
-  "Settings_ControllerSettings_Utilities": "Controller Utilities",
-  "Settings_General_Cancel": "Cancel",
-  "Settings_General_Confirm": "Confirm",
-  "Settings_General_CalibrateThumbstick": "Calibrate",
-  "Settings_General_NotEnoughSamples": "Please press up on the thumbstick at least %1$s more times to complete calibration.",
-  "Settings_General_InviteMoreSamples": "Calculated angle of %1$s degrees. Keep pressing up to refine that value or press Confirm to accept this calibration.",
-  "Settings_General_LeftThumbstickAngle": "Left Thumbstick Angle: %1$s°",
-  "Settings_General_RightThumbstickAngle": "Right Thumbstick Angle: %1$s°",
-  "Settings_General_Reset": "Reset",
-  "LegacyDebugger_NoApp": "Run any legacy input application to see its input data here."
+  "SecondaryController_ReturnWithHead": "Return bindings with HMD",
+  "Settings_ThumbstickDeadzone_Text": "Analog Çubuk Ölü Bölgesi:",
+  "Settings_ControllerSettings_Title": "Analog Çubuk Ayarları",
+  "Settings_ControllerSettings_Utilities": "Kontrolcü Araçları",
+  "Settings_General_Cancel": "İptal",
+  "Settings_General_Confirm": "Onayla",
+  "Settings_General_CalibrateThumbstick": "Ölçümle",
+  "Settings_General_NotEnoughSamples": "Lütfen analog çubuğa en az %1$s kere daha basarak ölçümlemeyi tamamlayın.",
+  "Settings_General_InviteMoreSamples": "Hesaplanan açı %1$s derece. Hassas ayar yapmak için basılı tutun veya ölçümlemeyi kabul etmek için Onayla'ya basın.",
+  "Settings_General_LeftThumbstickAngle": "Sol Analog Çubuk Açısı: %1$s°",
+  "Settings_General_RightThumbstickAngle": "Sağ Analog Çubuk Açısı: %1$s°",
+  "Settings_General_Reset": "Sıfırla",
+  "LegacyDebugger_NoApp": "Girdi bilgilerini burada görmek için eski girdiye sahip uygulamaları çalıştırın."
 }
