--- a/resources/webinterface/dashboard/localization/vrmonitor_brazilian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_brazilian.json
@@ -50,7 +50,7 @@
 	"Settings_SectionTitle_Internal": "Internal",
 	"Settings_SectionTitle_Home": "Home",
 	"Settings_SectionTitle_Chaperone": "Chaperone",
-	"Settings_SectionTitle_BaseStation": "Base Stations",
+	"Settings_SectionTitle_BaseStation": "Estações-base",
 	"Advanced_AllowSavingOfTimingInfo": "Allow saving of timing info",
 	"Advanced_AutoSaveTimingInfoOnExit": "Auto-save timing info on exit",
 	"Settings_EnableWebHelperDebugger": "Enable web helper debugger",
