--- a/resources/webinterface/dashboard/localization/vrmonitor_dutch.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_dutch.json
@@ -114,10 +114,10 @@
 	"Settings_Chaperone_Style_4": "Alleen vloer",
 	"Settings_Video_RefreshRate_Header": "Vernieuwingsfrequentie",
 	"Settings_Video_RefreshRate_HzSuffix": " Hz",
-	"Settings_Video_RefreshRate_NotFound": "Additional refresh rates are supported by your HMD, but were not detected by the graphics driver. Please verify your headset firmware and graphics drivers are up to date.",
-	"Settings_Video_RefreshRate_NotAvailableExtended": "Additional refresh rates are supported by your HMD, but SteamVR cannot manage refresh rates when the HMD is in extended mode.",
+	"Settings_Video_RefreshRate_NotFound": "Je HMD ondersteunt nog meer vernieuwingsfrequenties, maar deze kunnen niet door het grafische stuurprogramma worden gedetecteerd. Controleer of je de laatste firmware en grafische stuurprogramma's hebt.",
+	"Settings_Video_RefreshRate_NotAvailableExtended": "Je HMD ondersteunt nog meer vernieuwingsfrequenties, maar SteamVR kan vernieuwingsfrequenties niet beheren als de HMD zich in de uitgebreide modus bevindt.",
 	"Settings_Video_RefreshRate_EnableDirectModeAction": "Directe modus inschakelen",
-	"Settings_Video_RestartNotice": "This pending change will take effect once you restart SteamVR.",
+	"Settings_Video_RestartNotice": "Deze openstaande verandering wordt pas uitgevoerd als je SteamVR herstart.",
 	"Settings_Video_RestartAction": "SteamVR herstarten",
 	"Settings_Video_AppResFooter": "De huidige instelling rendert elk oog op %1$s",
 	"Settings_Advanced_MotionSmoothing_Header": "Motion smoothing",
@@ -179,10 +179,10 @@
 	"Settings_General_Cancel": "Annuleren",
 	"Settings_General_Confirm": "Bevestigen",
 	"Settings_General_CalibrateThumbstick": "Kalibreren",
-	"Settings_General_NotEnoughSamples": "Please press up on the thumbstick at least %1$s more times to complete calibration.",
-	"Settings_General_InviteMoreSamples": "Calculated angle of %1$s degrees. Keep pressing up to refine that value or press Confirm to accept this calibration.",
-	"Settings_General_LeftThumbstickAngle": "Left Thumbstick Angle: %1$s degrees",
-	"Settings_General_RightThumbstickAngle": "Right Thumbstick Angle: %1$s degrees",
+	"Settings_General_NotEnoughSamples": "Druk de analoge stick nog minstens %1$s keer naar boven om het kalibreren af te ronden.",
+	"Settings_General_InviteMoreSamples": "Berekende hoek: %1$s graden. Blijf naar boven toe drukken om die waarde verder af te stellen of druk op 'Bevestigen' om deze kalibratie te aanvaarden.",
+	"Settings_General_LeftThumbstickAngle": "Hoek analoge stick (links): %1$s graden",
+	"Settings_General_RightThumbstickAngle": "Hoek analoge stick (rechts): %1$s graden",
 	"Settings_Dashboard_ShowProgressIndicator": "Voortgangsindicator bij lange drukacties tonen",
 	"SettingsTime_5s": "5 seconden",
 	"SettingsTime_30s": "30 seconden",
