--- a/resources/webinterface/dashboard/localization/vrmonitor_vietnamese.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_vietnamese.json
@@ -78,7 +78,7 @@
 	"Settings_CheckForSteam": "Kiểm tra Steam",
 	"Settings_DebugInputBindings": "Bật tùy chọn gỡ lỗi trong giao diện gán phím tương tác",
 	"Settings_DoNotFadeToGrid": "Đừng ẩn về lưới khi ứng dụng treo",
-	"Settings_EnableDashboard": "Bật bảng điều khiển VR",
+	"Settings_EnableDashboard": "Bật trang tổng quan VR",
 	"Settings_HomeAppCheck": "Dùng trang chủ SteamVR",
 	"Settings_HomeAppDesc": "Tận hưởng môi trường ảo, tính năng xã hội, và nhiều thứ khác.",
 	"Settings_LargeSpace": "Không gian lớn",
@@ -89,7 +89,7 @@
 	"Settings_NightModeDesc": "Giảm độ sáng mũ chụp đến 5 giờ sáng (hoặc đến khi khởi động lại SteamVR).",
 	"Settings_NotificationDoNotDisturb_Info": "Khi bật chế độ Không làm phiền, việc hiển thị các thông báo sẽ bị chặn lại.",
 	"Settings_NotificationDoNotDisturb_Text": "Không làm phiền",
-	"Settings_PauseOnStandby": "Ngừng dựng hình khi mũ chụp ở trạng thái chờ",
+	"Settings_PauseOnStandby": "Ngừng dựng hình khi mũ chụp ở trạng nhàn rỗi (idle)",
 	"Settings_ShowPlaylistMenu": "Hiển thị trình đơn danh sách phát",
 	"Settings_SmallSpace": "Không gian nhỏ",
 	"Settings_StartSteamVROnAppLaunch": "Chạy SteamVR khi một ứng dụng khởi động",
@@ -135,7 +135,7 @@
 	"Settings_PerApplication_AppResTitle": " ",
 	"Settings_PerApplication_AppResHeader": "Cài đặt này là một hệ số áp dụng lên các cài đặt độ phân giải ứng dụng Video của bạn. Có thể cần khởi động lại ứng dụng để cài đặt này có hiệu lực. (Giá trị mặc định là 100%)",
 	"Settings_PerApplication_AppResFooter": "Thiết lập hiện tại dựng khung hình cho mỗi mắt ở mức %1$s",
-	"Settings_PerApplication_OverlayVisibleHeader": "Các ứng dụng lớp phủ hiện tại các thẻ trong bảng điều khiển SteamVR.",
+	"Settings_PerApplication_OverlayVisibleHeader": "Các ứng dụng lớp phủ hiện tại các thẻ trong trang tổng quan SteamVR.",
 	"Settings_PerApplication_OverlayVisibleCheckbox": "Chạy ứng dụng lớp phủ này khi SteamVR khởi chạy.",
 	"Settings_PerApplication_DashboardSuffix": "(Ứng dụng lớp phủ)",
 	"Settings_PerApplication_CustomSuffix": "(Tùy biến)",
@@ -149,8 +149,8 @@
 	"Settings_PerApplication_MotionSmoothing_Checkbox": "Bật làm mượt chuyển động cho ứng dụng này",
 	"Settings_MimeTypes_Pancake_Header": "Chọn một ứng dụng để chạy cùng với các ứng dụng 2D",
 	"Settings_Camera_EnableCamera": "Bật camera",
-	"Settings_Camera_AllowCameraInDashboard": "Hiện camera trong bảng điều khiển",
-	"Settings_Camera_AllowCameraInDashboard_Desc": "Bật một cửa sổ camera được gắn vào bộ điều khiển của bạn khi bảng điều khiển hiện.",
+	"Settings_Camera_AllowCameraInDashboard": "Hiện camera trong trang tổng quan",
+	"Settings_Camera_AllowCameraInDashboard_Desc": "Bật một cửa sổ camera được gắn vào bộ điều khiển của bạn khi trang tổng quan hiện.",
 	"Settings_Camera_AllowCameraForChaperoneBounds": "Dùng camera để cải thiện đường bao chaperone",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
 	"Settings_Camera_AllowCameraForRoomView": "Bật hiển thị phòng (Nhấp đôi nút System)",
