--- a/resources/webinterface/dashboard/localization/webhelper_russian.json
+++ b/resources/webinterface/dashboard/localization/webhelper_russian.json
@@ -17,7 +17,8 @@
 	"PowerMenuResetSeatedPosition": "Сбросить положение сидя",
 	"PowerMenuTurnOffController": "Выключить контроллер",
 	"PowerMenuQuitSceneApp": "Выйти из %1$s",
-	"PowerMenuExitVR": "Выход из VR",
+	"PowerMenuQuitSceneApp_NoApp": "Выйти из приложения",
+	"PowerMenuExitVR": "Выйти из VR",
 	"PowerMenuCancel": "Отменить",
 	"PowerMenuHeader": "Меню управления питанием",
 	"IPD_Description": "Расстояние между линзами",
