--- a/resources/webinterface/dashboard/localization/bindingui_danish.json
+++ b/resources/webinterface/dashboard/localization/bindingui_danish.json
@@ -311,6 +311,7 @@
   "SecondaryControllerTab": "Ekstra indstillinger",
   "SecondaryController_ReturnWithLeftHand": "Returner bindinger med venstre hånd",
   "SecondaryController_ReturnWithRightHand": "Returner bindinger med højre hånd",
+  "SecondaryController_ReturnWithHead": "Returner bindinger med hovedmonteret skærm",
   "Settings_ThumbstickDeadzone_Text": "Dødszone for styrepind:",
   "Settings_ControllerSettings_Title": "Styrepindsindstillinger",
   "Settings_ControllerSettings_Utilities": "Værktøjer til controller",
