--- a/resources/webinterface/dashboard/localization/bindingui_polish.json
+++ b/resources/webinterface/dashboard/localization/bindingui_polish.json
@@ -241,8 +241,8 @@
   "BindingList_ControllerOption": "Obecny kontroler",
   "BindingUI_List_Delete_Confirm": "Trwale usunąć przypisanie „%1$s”?",
   "BindingUI_ConfirmSelect_Title": "Zastąpić obecną konfigurację?",
-  "BindingUI_List_Select_Confirm": "Masz niezapisane zmiany dla twojej obecnej konfiguracji. Czy chcesz je odrzucić, czy zapisać jako osobiste przed ich użyciem?",
-  "BindingUI_List_Select_Confirm_Convert": "Masz również niezapisane zmiany dla twojej obecnej konfiguracji. Zaktualizowanie tej konfiguracji je odrzuci. Czy chcesz ją zapisać jako osobistą przed zaktualizowaniem tej konfiguracji?",
+  "BindingUI_List_Select_Confirm": "Masz niezapisane zmiany dla twojej obecnej konfiguracji. Czy chcesz zapisać te zmiany jako osobiste przypisania przed zastosowaniem nowego? W przeciwnym wypadku zmiany zostaną odrzucone.",
+  "BindingUI_List_Select_Confirm_Convert": "Masz również niezapisane zmiany dla twojej obecnej konfiguracji. Zaktualizowanie tej konfiguracji je odrzuci. Czy chcesz zapisać te zmiany jako osobiste przypisania przed zaktualizowaniem nowego?",
   "BindingUI_List_Upgrade_Confirm": "Ta konfiguracja jest z poprzedniej wersji %1$s. Konieczne może okazać się przypisanie dodatkowych działań w celu poprawnego jej działania.",
   "BindingUI_List_Developer_Binding_Title": "Oficjalne konfiguracje dla %1$s",
   "BindingUI_List_Developer_Binding_Description": "Są to oficjalne konfiguracje opublikowane przez producenta tej gry.",
@@ -311,6 +311,7 @@
   "SecondaryControllerTab": "Ustawienia dodatkowe",
   "SecondaryController_ReturnWithLeftHand": "Dołącz przypisania do lewej ręki",
   "SecondaryController_ReturnWithRightHand": "Dołącz przypisania prawej ręki",
+  "SecondaryController_ReturnWithHead": "Dołącz przypisania do gogli",
   "Settings_ThumbstickDeadzone_Text": "Martwa strefa drążka:",
   "Settings_ControllerSettings_Title": "Ustawienia martwej strefy",
   "Settings_ControllerSettings_Utilities": "Narzędzia kontrolera",
