--- a/resources/webinterface/dashboard/localization/vrmonitor_korean.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_korean.json
@@ -29,42 +29,42 @@
 	"VRMonitor_DevNav_Console": "콘솔",
 	"VRMonitor_DevNav_RoomOverview": "방 개요",
 	"VRMonitor_DevNav_Files": "파일",
-	"Settings_Audio_On": "When using SteamVR...",
-	"Settings_Audio_AudioPlay": "Set playback device to",
-	"Settings_Audio_AudioRecord": "Set record device to",
-	"Settings_Audio_Off": "When SteamVR is exited...",
-	"Settings_Audio_HDMIGain": "Enable Gain reduction on Vive HDMI Audio",
-	"Settings_Audio_LeaveAlone": "(Do not change device)",
+	"Settings_Audio_On": "SteamVR 사용 시...",
+	"Settings_Audio_AudioPlay": "재생 장치 설정:",
+	"Settings_Audio_AudioRecord": "녹음 장치 설정:",
+	"Settings_Audio_Off": "SteamVR 종료 시...",
+	"Settings_Audio_HDMIGain": "Vive HDMI 오디오 게인 감소 활성화",
+	"Settings_Audio_LeaveAlone": "(장치를 바꾸지 마세요)",
 	"Settings_Audio_AudioMirrorPlay": "장치에 오디오 복제하기",
 	"Settings_Audio_AudioMirrorUnsupported": "오디오 복제는 이 플랫폼에서 지원되지 않습니다",
-	"Settings_Audio_NoMirror": "(Do not mirror)",
-	"Settings_SectionTitle_Advanced": "Advanced",
-	"Settings_SectionTitle_Developer": "Developer",
-	"Settings_SectionTitle_General": "General",
-	"Settings_SectionTitle_Applications": "Applications",
-	"Settings_SectionTitle_Audio": "Audio",
-	"Settings_SectionTitle_Video": "Video",
-	"Settings_SectionTitle_Camera": "Camera",
-	"Settings_SectionTitle_Bluetooth": "Bluetooth",
-	"Settings_SectionTitle_Power": "Power",
-	"Settings_SectionTitle_Internal": "Internal",
-	"Settings_SectionTitle_Home": "Home",
-	"Settings_SectionTitle_Chaperone": "Chaperone",
-	"Settings_SectionTitle_BaseStation": "Base Stations",
-	"Advanced_AllowSavingOfTimingInfo": "Allow saving of timing info",
-	"Advanced_AutoSaveTimingInfoOnExit": "Auto-save timing info on exit",
-	"Settings_EnableWebHelperDebugger": "Enable web helper debugger",
+	"Settings_Audio_NoMirror": "(복제 안 하기)",
+	"Settings_SectionTitle_Advanced": "고급",
+	"Settings_SectionTitle_Developer": "개발자",
+	"Settings_SectionTitle_General": "일반",
+	"Settings_SectionTitle_Applications": "애플리케이션",
+	"Settings_SectionTitle_Audio": "오디오",
+	"Settings_SectionTitle_Video": "비디오",
+	"Settings_SectionTitle_Camera": "카메라",
+	"Settings_SectionTitle_Bluetooth": "블루투스",
+	"Settings_SectionTitle_Power": "전원",
+	"Settings_SectionTitle_Internal": "내부",
+	"Settings_SectionTitle_Home": "홈",
+	"Settings_SectionTitle_Chaperone": "샤프롱",
+	"Settings_SectionTitle_BaseStation": "베이스 스테이션",
+	"Advanced_AllowSavingOfTimingInfo": "시간 정보 저장 허용",
+	"Advanced_AutoSaveTimingInfoOnExit": "종료 시 시간 정보 자동 저장",
+	"Settings_EnableWebHelperDebugger": "웹 도움말 디버거 활성화",
 	"Settings_EnableWebHelperDebuggerDesc": "Chromium 개발자 도구와 디버거를, 내장되어 있는 Chromium 페이지에 포함하기 위해 디버깅 서버를 사용할 수 있습니다. SteamVR을 다시 시작해야 합니다.",
 	"Advanced_PerfGraphInHMD": "헤드셋에 GPU 성능 그래프 표시하기",
-	"Advanced_SaveFrameDataNow": "Save Frame Data",
-	"Explanation_DisableEnhancedPowerManagement": "Disable Windows Enhanced Power Management for SteamVR USB Devices if you experience a mysterious loss of tracking or an inability to pair wireless controllers. ",
+	"Advanced_SaveFrameDataNow": "프레임 데이터 저장",
+	"Explanation_DisableEnhancedPowerManagement": "알 수 없는 이유로 추적이 끊기거나 무선 컨트롤러가 페어링되지 못한다면, SteamVR USB 장치에 대한 Windows의 강화된 전원 관리를 비활성화 하세요. ",
 	"Explanation_QuickCalibrate": "방 설정을 빠르게 다시 설정해줍니다. 서있는 자세와 룸 스케일 VR에 대한 새로운 경계가 플레이 구역 바닥에 형성되어 헤드셋 중심에 나타나게 됩니다.",
-	"Explanation_RebootVive": "Reset your headset - this may fix USB related headset issues.",
+	"Explanation_RebootVive": "헤드셋을 초기화합니다. USB 관련 헤드셋 문제가 해결될 수 있습니다.",
 	"Explanation_RemoveAllSteamVRUSBDevices": "드라이버를 다시 설치하려면 SteamVR에 관련된 모든 USB 장치를 이 시스템에서 제거하세요.",
 	"Explanation_ResetDismissableWarnings": "임시 경고는 초기화되며 필요에 따라 다시 표시됩니다.",
 	"MenuAction_DisableEnhancedPowerManagement": "전원 관리 비활성화",
 	"MenuAction_QuickCalibrate": "빠른 조정",
-	"MenuAction_RebootVive": "Reset headset",
+	"MenuAction_RebootVive": "헤드셋 초기화",
 	"MenuAction_RecordTrackingData": "추적 데이터 기록",
 	"MenuAction_RemoveAllSteamVRUSBDevices": "모든 SteamVR USB 장치 제거",
 	"MenuAction_ResetDismissableWarnings": "경고 초기화",
@@ -77,16 +77,16 @@
 	"Settings_ArcadeMode": "아케이드 모드 활성화",
 	"Settings_CheckForSteam": "Steam 확인",
 	"Settings_DebugInputBindings": "입력 바인딩 사용자 인터페이스 디버깅 옵션 활성화",
-	"Settings_DoNotFadeToGrid": "Do not fade to grid when app hangs",
+	"Settings_DoNotFadeToGrid": "앱이 대기 중일 때 격자로 흐려지지 않음",
 	"Settings_EnableDashboard": "VR 대시보드 활성화",
-	"Settings_HomeAppCheck": "Use SteamVR Home",
-	"Settings_HomeAppDesc": "Enjoy virtual environments, social features, and more.",
+	"Settings_HomeAppCheck": "SteamVR Home 사용",
+	"Settings_HomeAppDesc": "가상 환경, 소셜 기능 및 그 외 여러 가지를 즐겨보세요.",
 	"Settings_LargeSpace": "큰 공간",
 	"Settings_LockedModeCheck": "잠금 모드",
-	"Settings_LockedModeDesc": "Allow rendering to headset while computer is locked.",
+	"Settings_LockedModeDesc": "컴퓨터가 잠겨 있는 동안 헤드셋 렌더링 허용",
 	"Settings_MediumSpace": "중간 크기 공간",
 	"Settings_NightModeCheck": "야간 모드",
-	"Settings_NightModeDesc": "Dim the headset until 5:00 AM (or until SteamVR is restarted).",
+	"Settings_NightModeDesc": "헤드셋이 오전 5시까지 어둡게 표시됩니다. SteamVR을 다시 시작하면 정상 모드로 돌아갑니다.",
 	"Settings_NotificationDoNotDisturb_Info": "방해 금지가 설정되어 있으면 수신 알림이 표시되지 않습니다.",
 	"Settings_NotificationDoNotDisturb_Text": "방해 금지",
 	"Settings_PauseOnStandby": "헤드셋이 유휴 상태일 때 렌더링 일시 정지",
@@ -94,43 +94,43 @@
 	"Settings_SmallSpace": "작은 공간",
 	"Settings_StartSteamVROnAppLaunch": "애플리케이션 실행 시 SteamVR 시작",
 	"Settings_StatusWindowAlwaysOnTop_Info": " ",
-	"Settings_StatusWindowAlwaysOnTop_Text": "Always on Top",
+	"Settings_StatusWindowAlwaysOnTop_Text": "항상 위",
 	"Settings_StatusWindowMinimizeToTray_Text": "SteamVR 상태 창을 최소화할 때 시스템 트레이 아이콘으로 최소화합니다",
-	"Settings_SuppressWarnings_Text": "Suppress warnings and alerts when SteamVR Status is minimized",
+	"Settings_SuppressWarnings_Text": "SteamVR이 최소화 상태일 때 경고나 알림 표시 안 함",
 	"StatusCheckInterval_Never": "사용 안 함",
 	"StatusCheckInterval_Normal": "보통(1초)",
 	"StatusCheckInterval_Often": "자주(100밀리초)",
 	"StatusCheckInterval_Seldom": "가끔(5초)",
-	"Settings_ThumbstickDeadzone_Text": "Thumbstick Deadzone",
-	"Settings_KnockKnock_Button": "Knock Knock",
-	"Settings_KnockKnock_Desc": "This allows people outside of VR to get the headset user's attention",
-	"Settings_CreateSystemReport_Button": "Create System Report",
-	"Settings_ViewLogs_Button": "View Logs",
+	"Settings_ThumbstickDeadzone_Text": "엄지스틱 데드존",
+	"Settings_KnockKnock_Button": "똑똑",
+	"Settings_KnockKnock_Desc": "VR 외부에 있는 사람들이 사용자를 부르는 것을 허용하며 표시해줍니다",
+	"Settings_CreateSystemReport_Button": "시스템 보고서 작성",
+	"Settings_ViewLogs_Button": "로그 보기",
 	"Settings_Chaperone_Style": "샤프롱 스타일",
 	"Settings_Chaperone_Style_0": "초보",
 	"Settings_Chaperone_Style_1": "중급",
 	"Settings_Chaperone_Style_2": "정사각형",
 	"Settings_Chaperone_Style_3": "고급",
-	"Settings_Chaperone_Style_4": "Floor only",
-	"Settings_Video_RefreshRate_Header": "Refresh Rate",
+	"Settings_Chaperone_Style_4": "바닥 전용",
+	"Settings_Video_RefreshRate_Header": "새로고침 속도",
 	"Settings_Video_RefreshRate_HzSuffix": " hz",
-	"Settings_Video_RefreshRate_NotFound": "Additional refresh rates are supported by your HMD, but were not detected by the graphics driver. Please verify your headset firmware and graphics drivers are up to date.",
-	"Settings_Video_RefreshRate_NotAvailableExtended": "Additional refresh rates are supported by your HMD, but SteamVR cannot manage refresh rates when the HMD is in extended mode.",
-	"Settings_Video_RefreshRate_EnableDirectModeAction": "Enable Direct Mode",
-	"Settings_Video_RestartNotice": "This pending change will take effect once you restart SteamVR.",
-	"Settings_Video_RestartAction": "Restart SteamVR",
-	"Settings_Video_AppResFooter": "The current setting renders each eye at %1$s",
+	"Settings_Video_RefreshRate_NotFound": "사용 중인 HMD에서 추가적인 새로고침 속도가 지원되지만 그래픽 드라이버에서는 감지되지 않습니다. 헤드셋 펌웨어를 확인하고 그래픽 드라이버가 최신 버전인지 확인해 주세요.",
+	"Settings_Video_RefreshRate_NotAvailableExtended": "사용 중인 HMD에서 추가적인 새로고침 속도가 지원되지만, HMD가 확장 모드일 때는 SteamVR이 새로고침 속도를 관리할 수 없습니다.",
+	"Settings_Video_RefreshRate_EnableDirectModeAction": "직접 모드 활성화",
+	"Settings_Video_RestartNotice": "지금 대기 중인 변경 사항은 SteamVR을 다시 시작하면 적용됩니다.",
+	"Settings_Video_RestartAction": "SteamVR을 다시 시작하세요",
+	"Settings_Video_AppResFooter": "각 눈에 렌더링되는 현재 설정: %1$s",
 	"Settings_Advanced_MotionSmoothing_Header": "모션 스무딩",
-	"Settings_Advanced_MotionSmoothing_Description": "Synthesizes new frames to maintain a good experience when the running application cannot keep up.",
-	"Settings_Advanced_MotionSmoothing": "Enable motion smoothing",
+	"Settings_Advanced_MotionSmoothing_Description": "실행 중인 애플리케이션이 감당할 수 없는 경우, 양호한 환경을 유지하기 위해 새로운 프레임을 통합합니다.",
+	"Settings_Advanced_MotionSmoothing": "모션 스무딩 활성화",
 	"Settings_Advanced_MotionSmoothing_Disabled": "모션 스무딩에는 비동기 중복 프로젝션 지원이 필요합니다.",
 	"Settings_Advanced_Supersampling_Header": "애플리케이션 해상도",
-	"Settings_Advanced_Supersampling_Warning": "The setting below overrides the automated setting and affects all applications. To change the resolution for a specific application, visit Applications Settings.",
-	"Settings_Advanced_SupersamplingManualOverride": "Enable resolution adjustments",
+	"Settings_Advanced_Supersampling_Warning": "아래의 설정은 자동 설정을 재정의하고 모든 애플리케이션에 영향을 미칩니다. 특정 애플리케이션의 해상도 변경은 '애플리케이션 설정'에서 진행하세요.",
+	"Settings_Advanced_SupersamplingManualOverride": "해상도 변경 사항 활성화",
 	"Explanation_Supersampling_Header": "SteamVR이 사용자의 GPU 성능에 맞춰 자동으로 애플리케이션의 해상도를 설정합니다.",
 	"Explanation_Supersampling": "*일부 애플리케이션은 설정을 적용하려면 다시 시작해야 합니다.",
 	"Explanation_SupersamplingFiltering": "슈퍼샘플링 필터링 옵션:",
-	"Settings_PerApplication_Header": "Create unique rendering settings for specific applications",
+	"Settings_PerApplication_Header": "특정 애플리케이션에 대한 고유한 렌더링 설정 생성하기",
 	"Settings_PerApplication_ChooseApplication": "애플리케이션 선택",
 	"Settings_PerApplication_AppResTitle": " ",
 	"Settings_PerApplication_AppResHeader": "이 설정은 왼쪽의 비디오 탭에 표시되는 현재 애플리케이션 전체 해상도 설정의 배수입니다. 설정을 적용하려면 애플리케이션을 다시 시작해야 합니다(기본값 100%).",
@@ -141,49 +141,49 @@
 	"Settings_PerApplication_CustomSuffix": "(사용자 지정)",
 	"Settings_PerApplication_MotionSmoothing_Header": "모션 스무딩",
 	"Settings_PerApplication_MotionSmoothing_Description": "이 애플리케이션의 모션 스무딩을 위한 글로벌 설정을 재정의하려면 아래 확인란을 사용하세요(모션 스무딩의 글로벌 설정은 <font color=#eeeeee>%1</font>입니다).",
-	"Settings_PerApplication_MotionSmoothing_Global": "Use global setting",
-	"Settings_PerApplication_MotionSmoothing_On": "Enabled",
-	"Settings_PerApplication_MotionSmoothing_Off": "Disabled",
-	"Settings_PerApplication_MotionSmoothing_AlwaysOn": "Force Always-On",
-	"Settings_PerApplication_MotionSmoothing_AlwaysOn_Desc": "Warning: Application will run at half framerate",
-	"Settings_PerApplication_MotionSmoothing_Checkbox": "Enable motion smoothing for this application",
+	"Settings_PerApplication_MotionSmoothing_Global": "글로벌 설정 사용",
+	"Settings_PerApplication_MotionSmoothing_On": "사용함",
+	"Settings_PerApplication_MotionSmoothing_Off": "사용 안함",
+	"Settings_PerApplication_MotionSmoothing_AlwaysOn": "항상 켜기(강제)",
+	"Settings_PerApplication_MotionSmoothing_AlwaysOn_Desc": "경고: 애플리케이션이 절반의 프레임 속도로 실행됩니다",
+	"Settings_PerApplication_MotionSmoothing_Checkbox": "이 애플리케이션에서 모션 스무딩 활성화하기",
 	"Settings_MimeTypes_Pancake_Header": "2D 애플리케이션을 실행하는 데 사용할 애플리케이션 선택",
 	"Settings_Camera_EnableCamera": "카메라 활성화",
-	"Settings_Camera_AllowCameraInDashboard": "Show Camera in Dashboard",
-	"Settings_Camera_AllowCameraInDashboard_Desc": "Turns on a camera window attached to your controller when the Dashboard is up.",
-	"Settings_Camera_AllowCameraForChaperoneBounds": "Use camera to enhance chaperone bounds",
+	"Settings_Camera_AllowCameraInDashboard": "대시보드에 카메라 표시",
+	"Settings_Camera_AllowCameraInDashboard_Desc": "대시보드가 표시되면 컨트롤러에 연결된 카메라 윈도우를 켭니다.",
+	"Settings_Camera_AllowCameraForChaperoneBounds": "카메라를 사용해 샤프롱 경계를 확장합니다",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
-	"Settings_Camera_AllowCameraForRoomView": "Enable Room View (System button double-click)",
-	"Settings_Camera_AllowCameraForRoomView_Desc": "Access Room View at any time by double clicking the System button",
-	"Settings_Camera_Compatibility": "Camera rate",
+	"Settings_Camera_AllowCameraForRoomView": "방 보기 활성화(시스템 버튼 더블 클릭)",
+	"Settings_Camera_AllowCameraForRoomView_Desc": "언제든지 시스템 버튼을 두 번 누르면 '방 보기'를 이용할 수 있습니다",
+	"Settings_Camera_Compatibility": "카메라 비율",
 	"Settings_Camera_CompatibilityExplanation": "추적이 끊기는 현상이 생긴다면 카메라 비율을 낮추거나, 카메라를 끄거나, 다른 USB 포트를 사용해 보세요.",
 	"Advanced_Appearance": "표시",
-	"Settings_Appearance_Background": "Background",
-	"Settings_Appearance_BackgroundDesc": "Pick a background for the default space",
+	"Settings_Appearance_Background": "배경",
+	"Settings_Appearance_BackgroundDesc": "기본 공간을 위한 배경을 고르세요",
 	"Settings_Appearance_UseDomeProjection": "돔 프로젝션 사용",
 	"Settings_Appearance_UseDomeProjectionDesc": "배경 이미지의 투영 스타일을 변경합니다. 어떤 배경에서는 몰입감을 더 높이기 위해 이 기능을 사용하기도 합니다. 사용 중인 배경에 왜곡 현상이 나타나면 이 기능을 사용해 보세요.",
 	"Settings_Appearance_DomeCameraHeight": "카메라 높이",
 	"Settings_Appearance_DomeCameraHeightDesc": "배경에 대한 카메라의 높이 조정",
 	"Settings_Appearance_DomeCameraRadius": "돔 반경",
 	"Settings_Appearance_DomeCameraRadiusDesc": "돔의 크기를 변경합니다.",
-	"Settings_Appearance_PlayAreaColor": "Play Area",
-	"Settings_Appearance_PlayAreaColorDesc": "Adjust the style of your play area. You will see this when games are loading, or if you have disabled SteamVR Home Beta",
-	"Settings_Appearance_MoreEnvironments": "Get more SteamVR Home Environments",
-	"Settings_Power_ReturnToWatchdogTimeout": "Exit SteamVR after",
-	"Settings_Power_TurnOffScreensTimeout": "Turn off displays after",
-	"Settings_Power_TurnOffControllersTimeout": "Turn off controllers after",
-	"Settings_Power_ControllerOffOnExit": "Turn off controllers when exiting SteamVR",
+	"Settings_Appearance_PlayAreaColor": "플레이 구역",
+	"Settings_Appearance_PlayAreaColorDesc": "플레이 구역의 스타일을 조정하세요. 이것은 게임을 불러올 때 또는 SteamVR Home 베타를 취소하면 표시됩니다",
+	"Settings_Appearance_MoreEnvironments": "SteamVR Home 환경 더 불러오기",
+	"Settings_Power_ReturnToWatchdogTimeout": "SteamVR 종료 대기 시간",
+	"Settings_Power_TurnOffScreensTimeout": "디스플레이 종료 대기 시간",
+	"Settings_Power_TurnOffControllersTimeout": "컨트롤러 종료 대기 시간",
+	"Settings_Power_ControllerOffOnExit": "SteamVR 종료 시 컨트롤러를 끄세요",
 	"Settings_General_DoNotDisturb_Text": "VR 사용 중에는 알림 표시 안 함",
-	"Settings_General_ShowBindingUI": "Edit Controller Bindings",
-	"Settings_General_ShowTrackerUI": "Manage Vive Trackers",
-	"Settings_General_Cancel": "Cancel",
-	"Settings_General_Confirm": "Confirm",
-	"Settings_General_CalibrateThumbstick": "Calibrate",
-	"Settings_General_NotEnoughSamples": "Please press up on the thumbstick at least %1$s more times to complete calibration.",
-	"Settings_General_InviteMoreSamples": "Calculated angle of %1$s degrees. Keep pressing up to refine that value or press Confirm to accept this calibration.",
-	"Settings_General_LeftThumbstickAngle": "Left Thumbstick Angle: %1$s degrees",
-	"Settings_General_RightThumbstickAngle": "Right Thumbstick Angle: %1$s degrees",
-	"Settings_Dashboard_ShowProgressIndicator": "Show progress indicator for long press actions",
+	"Settings_General_ShowBindingUI": "컨트롤러 바인딩 수정",
+	"Settings_General_ShowTrackerUI": "Vive 트래커 관리",
+	"Settings_General_Cancel": "취소",
+	"Settings_General_Confirm": "확인",
+	"Settings_General_CalibrateThumbstick": "조정",
+	"Settings_General_NotEnoughSamples": "조정을 완료하려면 최소 %1$s회 이상 엄지스틱을 누르세요.",
+	"Settings_General_InviteMoreSamples": "계산된 각도가 %1$s입니다. 계속 눌러 값을 조정하거나 확인을 눌러 이 조정값을 적용하세요.",
+	"Settings_General_LeftThumbstickAngle": "왼쪽 엄지스틱 각도: %1$s도",
+	"Settings_General_RightThumbstickAngle": "왼쪽 엄지스틱 각도: %1$s도",
+	"Settings_Dashboard_ShowProgressIndicator": "길게 누르기 동작 시 진행률 표시",
 	"SettingsTime_5s": "5초",
 	"SettingsTime_30s": "30초",
 	"SettingsTime_1m": "1분",
@@ -194,13 +194,13 @@
 	"SettingsTime_1h": "1시간",
 	"SettingsTime_Never": "사용 안 함",
 	"Settings_Appearance_CycleBackgroundImageTimeSec": "배경 변경 대기 시간:",
-	"Settings_Chaperone_BoundsColor": "Color",
-	"Settings_Chaperone_BoundsAlpha": "Alpha",
+	"Settings_Chaperone_BoundsColor": "색상",
+	"Settings_Chaperone_BoundsAlpha": "알파",
 	"Settings_Appearance_Controller": "컨트롤러 모델 변경",
 	"Settings_Appearance_Base": "베이스 스테이션 모델 변경",
-	"Settings_Appearance_Environment": "Change your home environment",
+	"Settings_Appearance_Environment": "홈 환경 변경",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOn": "바닥 경계 항상 표시",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOnDesc": " ",
 	"Settings_Connecting": "SteamVR을 시작하는 중...",
-	"Settings_ResetToDefault": "Reset To Default"
+	"Settings_ResetToDefault": "기본 설정으로 초기화"
 }
