--- a/resources/webinterface/dashboard/localization/webhelper_dutch.json
+++ b/resources/webinterface/dashboard/localization/webhelper_dutch.json
@@ -17,6 +17,7 @@
 	"PowerMenuResetSeatedPosition": "Zitpositie terugzetten",
 	"PowerMenuTurnOffController": "Controller uitschakelen",
 	"PowerMenuQuitSceneApp": "%1$s afsluiten",
+	"PowerMenuQuitSceneApp_NoApp": "App afsluiten",
 	"PowerMenuExitVR": "VR afsluiten",
 	"PowerMenuCancel": "Annuleren",
 	"PowerMenuHeader": "Energiemenu",
@@ -63,6 +64,6 @@
 	"OriginString_ControllerSource": "%2$s %3$s",
 	"OriginString_Source": "%3$s",
 	"OriginString_Controller": "%2$s",
-	"KeyboardDone": "Done",
+	"KeyboardDone": "Gereed",
 	"DO_NOT_TRANSLATE": "IgnoreMe"
 }
